# tinylvt

./: .gitignore  Cargo.toml  DEV.md  LICENSE  README.md  env.example  reset-dev-db.sh  rustfmt.toml
api/: Cargo.toml  Dockerfile  schema.sql
api/migrations/: 20250328031445_tables.down.sql  20250328031445_tables.up.sql  20251206233217_soft_deletes.down.sql  20251206233217_soft_deletes.up.sql  20260111195541_currency.down.sql  20260111195541_currency.up.sql  20260223062850_community_description.down.sql  20260223062850_community_description.up.sql  20260307065621_add_image_mime_type.down.sql  20260307065621_add_image_mime_type.up.sql  20260310001516_billing_storage.down.sql  20260310001516_billing_storage.up.sql  20260520174216_reserve_prices.down.sql  20260520174216_reserve_prices.up.sql  20260611000000_optional_auction_start.down.sql  20260611000000_optional_auction_start.up.sql  20260622000000_case_insensitive_identifiers.down.sql  20260622000000_case_insensitive_identifiers.up.sql  20260716000000_granular_proxy_processing.down.sql  20260716000000_granular_proxy_processing.up.sql  20260719000000_rounding_adjustment_entry_type.down.sql  20260719000000_rounding_adjustment_entry_type.up.sql
api/src/: email.rs  lib.rs  main.rs  password.rs  pubsub.rs  scheduler.rs  stripe_service.rs  telemetry.rs  time.rs
api/src/routes/: auction.rs  billing.rs  community.rs  currency.rs  login.rs  mod.rs  proxy_bidding.rs  site.rs  sse.rs
api/src/store/: auction.rs  billing.rs  community.rs  currency.rs  login.rs  mod.rs  proxy_bidding.rs  site.rs  space.rs
api/tests/api/: auction.rs  auction_sim.rs  billing.rs  bulk_activate.rs  community.rs  currency.rs  database.rs  email.rs  helpers.rs  login.rs  main.rs  member_removal.rs  proxy_bidding.rs  pubsub.rs  reserve_pricing.rs  schema_reference.rs  security_headers.rs  site.rs  stripe_sandbox.rs
backend/: Cargo.toml
backend/migrations/: 20250328031445_tables.down.sql  20250328031445_tables.up.sql
backend/src/: lib.rs  main.rs  password.rs  scheduler.rs  telemetry.rs  time.rs
backend/src/model/: mod.rs
backend/src/routes/: auction.rs  community.rs  create_account.rs  login.rs  mod.rs  proxy_bidding.rs  site.rs
backend/src/store/: mod.rs
backend/tests/: database.rs
backend/tests/api/: auction.rs  community.rs  database.rs  helpers.rs  login.rs  main.rs  proxy_bidding.rs  site.rs
dev-server/: Cargo.toml
dev-server/src/: main.rs
docs/: README.md  auction-guide.md  auctions.md  currency.md  desk-allocation.md  getting-started.md  index.html  setup.md  (+2 more)
payloads/: Cargo.toml
payloads/src/: api_client.rs  auction_sim.rs  billing.rs  errors.rs  lib.rs  requests.rs  responses.rs
screenshots/: Cargo.toml
screenshots/src/: framework.rs  main.rs
test-helpers/: Cargo.toml
test-helpers/src/: lib.rs  mock.rs
test-helpers/src/mock/: chore_dataset.rs  desk_allocation.rs  dev_dataset.rs  mod.rs
ui/: Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html  llms.txt  nginx.conf.template  styles.css  tailwind.config.js
ui-tests/: Cargo.toml  README.md
ui-tests/src/: authentication.rs  cleanup.rs  community.rs  community_management.rs  framework.rs  lib.rs  main.rs  site.rs
ui/src/: auth.rs  communities.rs  lib.rs  logs.rs  main.rs  profile.rs  sites.rs  state.rs  theme.rs
ui/src/components/: active_status_toggle.rs  annotated_screenshot.rs  auction_admin_controls.rs  auction_chart.rs  auction_chart_demo.rs  auction_chart_player.rs  auction_info.rs  auction_interface_walkthrough.rs  auction_page_wrapper.rs  auction_params_editor.rs  auction_params_viewer.rs  auction_settlement.rs  auction_sim_editor.rs  auction_tab_header.rs  auction_timeline.rs  auction_topline_info.rs  auth_form.rs  billing_section.rs  bulk_activate_modal.rs  change_role_modal.rs  community_image_upload.rs  community_page_wrapper.rs  community_tab_header.rs  confirmation_modal.rs  connection_status_indicator.rs  copy_button.rs  countdown_timer.rs  create_space_modal.rs  currency_config_editor.rs  dark_mode_toggle.rs  edit_credit_limit_modal.rs  email_verification_banner.rs  image_picker.rs  inline_edit.rs  leave_community_button.rs  login_form.rs  markdown_editor.rs  markdown_text.rs  mod.rs  modal.rs  (+25 more)
ui/src/components/layout/: docs_layout.rs  docs_sidebar.rs  footer.rs  header.rs  main_layout.rs  mod.rs
ui/src/components/toast/: mod.rs  toast_container.rs  toast_item.rs
ui/src/contexts/: mod.rs  toast.rs
ui/src/hooks/: auction_subscription.rs  mod.rs  use_auction_detail.rs  use_auction_round_results.rs  use_auction_rounds.rs  use_auction_user_bids.rs  use_auctions.rs  use_authentication.rs  use_communities.rs  use_community_images.rs  use_current_round.rs  use_exponential_refetch.rs  use_fetch.rs  use_issued_invites.rs  use_last_round.rs  use_logout.rs  use_member_credit_limit_override.rs  use_member_currency_info.rs  use_member_transactions.rs  use_members.rs  use_orphaned_accounts.rs  use_platform_stats.rs  use_proxy_bidding_participants.rs  use_proxy_bidding_settings.rs  use_push_route.rs  use_require_auth.rs  use_round_prices.rs  use_site.rs  use_sites.rs  use_spaces.rs  use_storage_usage.rs  use_subscription_info.rs  use_system_theme.rs  use_title.rs  use_treasury_account.rs  use_treasury_transactions.rs  use_user_bids.rs  use_user_eligibility.rs  use_user_space_values.rs
ui/src/pages/: accept_invite.rs  auction_detail.rs  auction_guide.md  auction_guide.rs  auction_rounds.rs  communities.rs  community_billing.rs  community_currency.rs  community_detail.rs  community_images.rs  community_invites.rs  community_members.rs  community_settings.rs  community_treasury.rs  create_auction.rs  create_community.rs  create_site.rs  docs.rs  forgot_password.rs  help.rs  home.rs  landing.rs  logged_in_home.rs  logged_out_home.rs  login.rs  mod.rs  not_found.rs  orphaned_accounts.rs  pricing.rs  profile.rs  reset_password.rs  site_admin.rs  site_auctions.rs  site_detail.rs  site_overview.rs  site_settings.rs  site_spaces.rs  terms.rs  test.rs  verify_email.rs
ui/src/test_components/: auction_info_test.rs  mod.rs
ui/src/utils/: mod.rs  time.rs
(+13 files in other folders)
