[workspace]
# members= ["backend", "payloads", "ui"]
members= ["backend", "payloads", "email-hash"]
resolver = "3"

[workspace.dependencies]
derive_more = { version = "2.0.1", features = ["display"] }
jiff = { version = "0.2", features = ["serde"] }
jiff-sqlx = { version = "0.1.1" }
reqwest = { version = "0.12.15", features = ["json"] }
rust_decimal = { version = "1.37.1", features = ["serde", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8" }
thiserror = "2.0.12"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
