[workspace]
members = [
    "api",
    "payloads",
    "ui",
    "test-helpers",
    "dev-server",
    "markdown-html"
]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.97"
derive_more = { version = "2.0.1", features = ["display"] }
jiff = { version = "0.2", features = ["serde"] }
jiff-sqlx = { version = "0.1.1", features = ["postgres"] }
reqwest = { version = "0.12.15", features = ["json"] }
rust_decimal = { version = "1.37.1", features = ["serde", "macros"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8" }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
