[package]
name = "api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
mock-time = []
mock-email = []

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.10.2"
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22"
derive_more = { workspace = true }
dotenvy = "0.15.7"
jiff = { workspace = true }
jiff-sqlx = { workspace = true }
payloads = { path = "../payloads", features = ["use-sqlx"] }
rand_core = { version = "0.6.4", features = ["std"] }  # argon2 depends on an older version of rand_core with a now-deprecated trait
reqwest = { workspace = true, features = ["cookies"] }
resend-rs = "0.15.0"  # For email sending
rust_decimal = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid", "rust_decimal", "time" ] }
sqlx-postgres = "0.8.3"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
api = { path = "." }
test-helpers = { path = "../test-helpers" }  # enables mocking for api
