[package]
name = "api"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
mock-time = []  # enables time mocking and deterministing scheduler behavior
mock-email = []
mock-stripe = []

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.10.2"
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
async-stripe = "=1.0.0-rc.6"
async-stripe-billing = { version = "=1.0.0-rc.6", default-features = false, features = ["subscription", "billing_portal_session"] }
async-stripe-checkout = { version = "=1.0.0-rc.6", default-features = false, features = ["checkout_session"] }
async-stripe-core = { version = "=1.0.0-rc.6", default-features = false, features = ["customer"] }
async-stripe-shared = "=1.0.0-rc.6"
base64 = "0.22"
derive_more = { workspace = true }
dotenvy = { workspace = true }
hex = "0.4.3"
hmac = "0.12.1"
infer = "0.19.0"
jiff = { workspace = true }
jiff-sqlx = { workspace = true }
payloads = { path = "../payloads", features = ["use-sqlx"] }
rand_core = { version = "0.6.4", features = ["std"] }  # argon2 depends on an older version of rand_core with a now-deprecated trait
reqwest = { workspace = true, features = ["cookies"] }
resend-rs = "0.15.0"  # For email sending
rust_decimal = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.9"
sqlx = { workspace = true, features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid", "rust_decimal" ] }
sqlx-postgres = "0.8.3"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
api = { path = "." }
async-stripe-billing = { version = "=1.0.0-rc.6", default-features = false, features = ["billing_portal_configuration"] }
async-stripe-core = { version = "=1.0.0-rc.6", default-features = false, features = ["payment_intent"] }
async-stripe-payment = { version = "=1.0.0-rc.6", default-features = false, features = ["payment_method"] }
async-stripe-product = { version = "=1.0.0-rc.6", default-features = false, features = ["price"] }
async-stripe-types = "=1.0.0-rc.6"
test-helpers = { path = "../test-helpers" }  # enables mocking for api
