[package]
name = "backend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = "4.10.2"
anyhow = "1.0.97"
argon2 = { version = "0.5.3", features = ["std"] }
derive_more = { workspace = true }
jiff = { workspace = true }
jiff-sqlx = { workspace = true, features = ["postgres"] }
payloads = { path = "../payloads", features = ["use-sqlx"] }
# argon2 depends on an older version of rand_core with a now-deprecated trait
rand_core = { version = "0.6.4", features = ["std"] }
reqwest = { version = "0.12.15", features = ["json", "cookies"] }
rust_decimal = { workspace = true }
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { workspace = true }
serde_json = "1.0.140"
sqlx = { workspace = true, features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid", "rust_decimal" ] }
sqlx-postgres = "0.8.3"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter"] }
uuid = { workspace = true }
