[package]
name = "dev-server"
version = "0.1.0"
edition = "2024"

[dependencies]
api = { path = "../api" }
test-helpers = { path = "../test-helpers" }  # enables mocking for api
payloads = { path = "../payloads" }
anyhow = { workspace = true }
jiff = { workspace = true }
jiff-sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rust_decimal = { workspace = true }
sqlx = { workspace = true, features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid", "rust_decimal", "time" ] }
