[package]
name = "payloads"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { workspace = true }
jiff = { workspace = true }
jiff-sqlx = { workspace = true, optional = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, optional = true }
uuid = { workspace = true }

[features]
default = []
# enables deserializing types with sqlx
use-sqlx = ["sqlx", "jiff-sqlx"]
