[package]
name = "screenshots"
version = "0.1.0"
edition = "2024"

[dependencies]
api = { path = "../api" }
test-helpers = { path = "../test-helpers" }
payloads = { path = "../payloads" }
anyhow = { workspace = true }
fantoccini = "0.21"
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = "0.8"
base64 = "0.22"
