[package]
name = "ui-tests"
version = "0.1.0"
edition = "2024"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "cleanup"
path = "src/cleanup.rs"

[dependencies]
api = { path = "../api", features = ["test-utils"] }
test-helpers = { path = "../test-helpers" }
payloads = { path = "../payloads" }
anyhow = { workspace = true }
fantoccini = "0.21"
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = "0.8"
