[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
jiff = { workspace = true }
payloads = { path = "../payloads" }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["registry", "env-filter", "tracing-log"] }
tracing-web = "0.1.3"
uuid = { version = "1.16.0", features = ["v4", "serde", "js"] }
wasm-logger = "0.2.0"
web-sys = { version = "0.3.77", features = ["HtmlInputElement"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yewdux = "0.11.0"
