[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
base64 = "0.22.1"
futures = "0.3.31"
gloo-timers = { version = "0.3.0", features = ["futures"] }
jiff = { workspace = true, features = ["js"] }
js-sys = "0.3.77"
payloads = { path = "../payloads" }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.42"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry", "env-filter", "tracing-log"] }
tracing-web = "0.1.3"
uuid = { workspace = true, features = ["v4", "serde", "js"] }
web-sys = { version = "0.3.77", features = [
    "HtmlInputElement", 
    "HtmlSelectElement",
    "HtmlTextAreaElement",
    "Window", 
    "Document", 
    "Element", 
    "DomTokenList", 
    "MediaQueryList",
    "MediaQueryListEvent",
    "EventTarget",
    "Storage",
    "File",
    "FileList",
    "FileReader",
    "Event"
] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yewdux = "0.11.0"
